2009-11-24 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/node.cpp: Clean up obsolete
	doc-comments.

2009-11-24 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/node.h
	(openvrml::node): Use friend templates for field_value_listener
	and exposedfield.

2009-11-02 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Updated copyright notice.

2009-11-02 Braden McDaniel  <braden@endoframe.com>

	* Makefile.am: Simplify addition of openvrml-gl.pc to
	pkgconfig_DATA.

2009-11-01 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Require pkg-config >= 0.18.0.

2009-11-01 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Use pkg-config to find SDL.

2009-11-01 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Don't fail on missing libpng if PNG_LIBS has been
	set.

2009-11-01 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Improve error message when no SpiderMonkey is
	found: account for the possibility that the installed libjs was
	not built with -DJS_THREADSAFE.

2009-11-01 Braden McDaniel  <braden@endoframe.com>

	Require at least FreeType 2.2.

	* configure.ac: Require FreeType >= 2.2.
	* src/node/vrml97/text.cpp: Remove use of OPENVRML_FT_CONST.

2009-11-01 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Set JS_CFLAGS (if it has not been set) when
	building --with-libjs; ensure libjs was built with
	-DJS_THREADSAFE.

2009-10-31 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Require mozilla-js >= 1.8.1.8.  This means we
	don't need to doctor JS_CFLAGS for -DJS_THREADSAFE anymore.

2009-10-31 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Removed references to obsolete variants of
	mozilla-js.pc.

2009-10-31 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Since all of the optional features now appear in
	dynamically loaded modules, we no longer need the machinery to
	propagate the resulting dependencies to the pkg-config metadata.
